--- a/learning_templates/templates/basic_app/base.html
+++ b/learning_templates/templates/basic_app/base.html
@@ -20,6 +20,7 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link" href="{% url 'admin:index' %}">Admin</a>
                         <!-- <a class="nav-item nav-link" href="{ % url 'basic_app:other' % }"> Other </a> -->
+                        <!-- we can use above but we need to change 'basic_app:other' into  basic-app's urls.py file  -->
                         <a class="nav-item nav-link" href="{% url 'basic_app:other_1' %}">Other</a>
                     </div>
                 </div>
